# datavalgen-model-beach

./: Dockerfile  Makefile  README.md  pyproject.toml  synthetic_beach_signal_full.csv
data/202604_synthetic/: preparation_report.json  synthetic_beach_signal_full.csv
data/202604_synthetic/splits_by_centre/: isala.csv  maastricht.csv  nki.csv  radboudumc.csv  suining.csv  uhn.csv  umcg.csv
src/datavalgen_model_beach/: factory.py  model.py
